# agl-carla-perception-GSOC-2026

./: .gitignore  README.md
agl-client/: agl_lidar_test.py  agl_pc_test.py
carla-bridge/: lidar_probe.py  lidar_to_sock.py  sock_to_pointcloud2.py  udp_to_ros2.py
perception_ws/src/lidar_detector/: CMakeLists.txt  package.xml
perception_ws/src/lidar_detector/src/: lidar_detector.cpp
