<?xml version="1.0"?>
<package format="3">
  <name>lidar_detector</name>
  <version>0.1.0</version>
  <description>Simple PCL perception node: cluster LiDAR points into 3D bounding boxes</description>
  <maintainer email="shaurya@example.com">Shaurya Rane</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
